[package]
name = "raft_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-raft = "0.6.1"
async-trait = "0.1.64"
axum = "0.6.5"
axum-macros = "0.3.4"
prost = "0.11.6"

rocksdb = "0.20.1"
serde = { version = "1.0", features = ["derive"] }


tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.0", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
tower-layer = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
